--- a/data-architect.html
+++ b/data-architect.html
@@ -57,7 +57,7 @@ Jose, California. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/sr-software-engineer-big-data-cloud-architecture-21835-ad-pJ-RFar6zvraKkRyNN8'>Sr.Software Engineer-Big Data, Cloud Architecture -21835 #0224 job at Radiant Digital in Temple Terrace, FL, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/sr-software-engineer-big-data-cloud-architecture-21835-ad-pJ-RFar6zvraKkRyNN8'>Sr.Software Engineer-Big Data, Cloud Architecture -21835 #0224 job at Radiant Digital in Temple Terrace, FL, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -88,7 +88,7 @@ vision experts and machine learning researchers, and are expected to get up?...<
 <p>2 days ago ... About Connect ? Payment Services ? Estate Management ? Verifone Marketplace ? 
 Developer Central. Solutions. Retail ? Hospitality ? Acquirers ? Petro. Support.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DiverseLynxLLC1/743999692124719-windows-data-center-architect-administrator'>Diverse Lynx LLC Windows Data Center Architect Administrator | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/DiverseLynxLLC1/743999692124719-windows-data-center-architect-administrator'>Diverse Lynx LLC Windows Data Center Architect Administrator | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -104,7 +104,7 @@ Developer Central. Solutions. Retail ? Hospitality ? Acquirers ? Petro. Support.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/datastrong/job/oRmyafwF'>Datastrong Careers - Data Architect</a></h5> 
+<h5><a href='http://jobs.jobvite.com/datastrong/job/oRmyafwF'>Datastrong Careers - Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 14, 2019 ... Data Architect. Location: Boston, MA. Job ID: 1084. The Data Architect will 
 support the implementation of a customer data lake. You should be able to 
@@ -166,7 +166,7 @@ high performing applications using NOSQL DB and BigData...</p>
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CoreTechsInc/743999691589440-master-data-management-mdm-architect'>CoreTechs Inc. Master Data Management (MDM) Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CoreTechsInc/743999691589440-master-data-management-mdm-architect'>CoreTechs Inc. Master Data Management (MDM) Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -226,7 +226,7 @@ Acts as a data SME for those domains. Responsible for all issues and its?...</p>
 <p>6 days ago ... Creation, optimization and maintenance of conceptual, logical and physical 
 database models; Documentation of functional requirements and system?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wipro.referrals.selectminds.com/jobs/data-center-and-cloud-architect-11502'>Data Center and Cloud Architect - Wipro Careers</a></h5> 
+<h5><a href='https://wipro.referrals.selectminds.com/jobs/data-center-and-cloud-architect-11502'>Data Center and Cloud Architect - Wipro Careers</a></h5> 
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -312,7 +312,7 @@ class?...</p>
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ouster/jobs/1750046'>Job Application for Data Architect at Ouster</a></h5> 
+<h5><a href='https://boards.greenhouse.io/ouster/jobs/1750046'>Job Application for Data Architect at Ouster</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jun 29, 2019 ... We're looking for an expert communicator with a strong customer orientation and 
 object-oriented programming experience to join our IT team as a Data Architect?...</p>
@@ -329,7 +329,7 @@ object-oriented programming experience to join our IT team as a Data Architect?.
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-07-07</p>
 <hr/>
-<h5><a href='https://girteka.workable.com/j/37645A16E7'>Girteka Logistics - Jobs: Data Architect - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://girteka.workable.com/j/37645A16E7'>Girteka Logistics - Jobs: Data Architect - Apply online</a></h5> 
 <p><span class="badge badge-light">Vilnius Vilnius</span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
@@ -356,7 +356,7 @@ Engineering. Requisition #: WD30072470142. Sr. Software Engineer.</p>
 implementation of ETL processes throughout the design, build and maintenance
 ?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999691160451-data-architect'>CapTech Consulting Data Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999691160451-data-architect'>CapTech Consulting Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
@@ -414,7 +414,7 @@ Security Engineer, Cyber Operations (TS/SCI Polygraph Clearance). Annapolis?...<
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-06-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/primerevenue/job/ohWv9fwB'>PrimeRevenue Careers - Director, Data Architecture</a></h5> 
+<h5><a href='https://jobs.jobvite.com/primerevenue/job/ohWv9fwB'>PrimeRevenue Careers - Director, Data Architecture</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
@@ -442,12 +442,12 @@ Security Engineer, Cyber Operations (TS/SCI Polygraph Clearance). Annapolis?...<
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-06-28</p>
 <hr/>
-<h5><a href='https://johnsoncontrols.referrals.selectminds.com/jobs/database-architect-75361'>Database Architect - Johnson Controls Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://johnsoncontrols.referrals.selectminds.com/jobs/database-architect-75361'>Database Architect - Johnson Controls Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Who we are: Sensormatic Solutions is on a mission: we are revolutionizing the 
 bricks-and-mortar retail world with innovative products that fuel...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1518484?gh_src=10864eeb1'>Job Application for Database Architect at Wikimedia Foundation</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1518484?gh_src=10864eeb1'>Job Application for Database Architect at Wikimedia Foundation</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-06-28</p>
 <hr/>
